--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,3 +1,7 @@
 2023-06-29 SHOULD implement a PWA caching strategy https://developer.chrome.com/docs/workbox/caching-strategies-overview/
 2023-06-29 MUST implement a server lookup to connect players to minimize game setup
 2023-07-25 SHOULD add a help section explaining how to play the game
+2023-08-19 MUST include the number of players in the share
+2023-08-19 MUST include a demo area telling players how to play
+2023-08-19 MUST include a list of all locations for the spy
+2023-08-19 SHOULD include a description of your goal as a spy or player
